git commit -m "Agregar modificaciones en el CSS para mejorar la responsividad
Se han realizado cambios en el archivo CSS para mejorar la adaptabilidad del diseño a diferentes tamaños de pantalla. Esto incluye ajustes en las media queries, estilos flexibles y otras modificaciones para garantizar una experiencia de usuario consistente en dispositivos de distintos tamañ"

--- a/styles.css
+++ b/styles.css
@@ -399,3 +399,12 @@ footer p{
 
     
 }
+@media (max-width: 400px) and (max-height: 750px) {
+    #section1{
+        padding: 150px 0px;    
+    }
+    #section2{
+        padding:  300px 0px 320px;
+    }
+}
+
